# ncheat

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
tests/: main.rs
